# SSU_DiscordBot

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  test.py
.github/workflow/: deploy.yml
cogs/: fun.py  general.py  information.py  moderation.py  owner.py  register.py  renew.py  today.py
database/: dynamodb.py
lambda_scraper/: entrypoint.py  lambda_database.py  lambda_function.py  readme.md  requirements.txt  scraper.py
lambda_scraper/dto/: response.py
response/: bot_response_object.py
scraper/: scrap.py
